# python-model-registry

./: Dockerfile  Makefile  README.md  pyproject.toml
src/api/: deps.py  run.py
src/core/: logger.py  settings.py
src/core/models_repositories/: __init__.py  base.py  file_system.py  mongo.py
src/integrations/mongo/: client.py
tests/: conftest.py
tests-e2e/: Makefile  README.md  docker-compose.yml
tests-e2e/tests/: test_mongo.py
tests/api/: test_deps.py  test_run.py
tests/core/: test_settings.py
tests/core/models_repositories/: test_base.py  test_file_system.py  test_mongo.py
tests/integrations/mongo/: test_client.py
